BEN1: SIM-drive per-operator throughput sweep measured and appended to doc/bench/findings.md (computenet-x9e.4.4)
Ran OperatorThroughputBenchmark.sim over all 18 subjects x 2 directions
(36 combinations, all measured, none cut for wall-clock) at the epic's
annotation config (fork=2, warmup=5x1s, measurement=10x1s,
Mode.Throughput). Wall-clock: 18m29s.

Rendered through ThroughputReport/Findings.entry, pasted verbatim:
5 of 36 rows classify Reportable against NOISE_FLOOR (all RETRACT
direction); the other 31 are named omissions. Dispersion range
0.00355-0.08467. No journal/durability wiring is attached to these
graphs (verified against SimWorld.kt and ManagedHost.kt) so WAL is
not in play. TriggerClaim.None, rendered MARKED INCOMPLETE.

Prose comparison against the sibling REAL-drive entry
(computenet-x9e.4.5) is included but constructs no mixed-drive table:
the same INSERT/RETRACT dispersion asymmetry appears under both
drives, which is evidence for TagState tag-map growth as the
dominant unintended cost rather than real-scheduler jitter.

Diff confined to doc/bench/findings.md, append-only after line 454.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>